Bug 399734 - Erase drawings in presentation mode should use a different icon than eraser
Summary: Erase drawings in presentation mode should use a different icon than eraser
Status: RESOLVED FIXED
Alias: None
Product: okular
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.5.1
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Okular developers
URL:
Keywords: junior-jobs, usability
Depends on:
Blocks:
 
Reported: 2018-10-12 18:59 UTC by Simone Gaiarin
Modified: 2018-12-21 14:39 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 19.04.0
Sentry Crash Report:


Attachments
Duplicated icon eraser (8.58 KB, image/png)
2018-10-12 18:59 UTC, Simone Gaiarin
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Simone Gaiarin 2018-10-12 18:59:27 UTC
Created attachment 115606 [details]
Duplicated icon eraser

SUMMARY
"Erase drawing" in presentation mode could use the icon "draw-eraser-delete" instead of using the same icon as "Eraser" (which is "draw-eraser").
See attachment

STEPS TO REPRODUCE
1. Open presentation mode
2. Show the top bar

OBSERVED RESULT
Two tools have the same eraser icon

EXPECTED RESULT
The two tools should have different icons

SOFTWARE VERSIONS
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Simone Gaiarin 2018-10-12 19:20:08 UTC
"draw-eraser-delete" is a red trash bin as the icon "delete", so maybe also the icon "delete" is fine.
Comment 2 Oliver Sander 2018-12-21 11:45:26 UTC
Git commit 1547c7834029ab784fc2cd25d6291459d868687c by Oliver Sander, on behalf of Simone Gaiarin.
Committed on 21/12/2018 at 11:44.
Pushed by sander into branch 'master'.

Move "erase drawings" action to last position and change its icon

It is more logical to have the drawing tools first, then the eraser,
and then the action to delete everything. Also the two actions to erase
things are close to each other now.

The icon of "erase drawing" has been changed to draw-eraser-delete-objects
to distinguish it from the "Eraser" tool.

Differential Revision: https://phabricator.kde.org/D16171

M  +1    -1    part.cpp
M  +6    -5    ui/presentationwidget.cpp

https://commits.kde.org/okular/1547c7834029ab784fc2cd25d6291459d868687c